--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -15,15 +15,16 @@
 
             <TextView
                 android:id="@+id/title"
-                android:textSize="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/arial_rounded_bold"
+                android:text="@string/choose_bigger"
                 android:textColor="@color/purple_500"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/choose_bigger" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -39,14 +40,14 @@
             app:layout_constraintTop_toBottomOf="@+id/title_container" />
 
         <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/mid"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/mid"
-            app:layout_constraintBottom_toBottomOf="@+id/mid"
-            app:layout_constraintTop_toTopOf="@+id/mid"
-            android:layout_width="0dp"
-            android:layout_height="200dp">
+            app:layout_constraintTop_toTopOf="@+id/mid">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -57,11 +58,11 @@
                     style="@style/OptionText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="2.3"/>
+                    tools:text="2.3" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -69,14 +70,14 @@
 
 
         <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/mid"
             app:layout_constraintLeft_toLeftOf="@+id/mid"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/mid"
-            app:layout_constraintTop_toTopOf="@+id/mid"
-            android:layout_width="0dp"
-            android:layout_height="200dp">
+            app:layout_constraintTop_toTopOf="@+id/mid">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -87,11 +88,11 @@
                     style="@style/OptionText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="2.3"/>
+                    tools:text="2.3" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
