--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="OptionText">
         <item name="android:textSize">22sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name= "android:fontFamily">@font/arial_rounded_bold</item>
     </style>
 
