--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,24 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/arial_rounded_bold"
             android:gravity="center"
-            android:textColor="@color/score"
+            android:textColor="@color/faded_blue"
             android:textSize="17sp"
             android:visibility="invisible"
             app:layout_constraintTop_toBottomOf="@+id/main_text"
             tools:text="Highest Score was 2002." />
+
+        <TextView
+            android:id="@+id/about_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/arial_rounded_bold"
+            android:gravity="center"
+            android:text="@string/about"
+            android:textColor="@color/faded_blue"
+            android:textSize="14sp"
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <Button
             android:id="@+id/play"
