--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animationView"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:text="@string/pitch"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="25sp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -43,29 +43,49 @@
             app:layout_constraintTop_toBottomOf="@+id/main_text"
             tools:text="Highest Score was 2002." />
 
-        <TextView
-            android:id="@+id/about_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/arial_rounded_bold"
-            android:gravity="center"
-            android:text="@string/about"
-            android:textColor="@color/faded_blue"
-            android:textSize="14sp"
-            android:padding="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/title_layout"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/app_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/arial_rounded_bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/about_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/arial_rounded_bold"
+                android:gravity="center"
+                android:text="@string/about"
+                android:textColor="@color/faded_blue"
+                android:textSize="20sp"
+                android:padding="10dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/play"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="30dp"
             android:fontFamily="@font/arial_rounded_bold"
             android:padding="20dp"
             android:text="@string/play"
             android:textAllCaps="false"
-            android:textSize="27sp"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent" />
 
 
