--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/purple_700">
+        android:background="@color/background">
 
         <View
             android:id="@+id/time_indicator"
@@ -79,7 +79,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/purple_pinkish">
+                android:background="@color/purple_500">
 
                 <TextView
                     android:id="@+id/left"
@@ -114,7 +114,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/purple_pinkish">
+                android:background="@color/purple_500">
 
                 <TextView
                     android:id="@+id/right"
