--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="50dp"
                 app:layout_constraintHeight_percent="0.5">
+
+                <ImageView
+                    android:src="@drawable/ic_big_number"
+                    android:id="@+id/logo"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="0dp"
+                    app:layout_constraintWidth_percent="0.5"
+                    android:layout_height="100dp"/>
 
                 <TextView
                     android:id="@+id/verbal_answer"
@@ -73,6 +82,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:visibility="invisible"
                 android:id="@+id/app_title_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
