--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,14 +25,18 @@
                 android:layout_height="0dp"
                 app:layout_constraintHeight_percent="0.5">
 
-                <ImageView
+                <TextView
                     android:src="@drawable/ic_big_number"
                     android:id="@+id/logo"
+                    android:gravity="center"
+                    android:fontFamily="@font/arial_rounded_bold"
+                    android:textColor="@color/bubble_gum"
+                    android:textSize="36sp"
+                    android:text="@string/app_name"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_width="0dp"
-                    app:layout_constraintWidth_percent="0.5"
+                    android:layout_width="wrap_content"
                     android:layout_height="100dp"/>
 
                 <TextView
