--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,26 @@
                 android:id="@+id/logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/arial_rounded_bold"
                 android:gravity="center"
                 android:src="@drawable/ic_big_number"
                 android:text="@string/app_name"
                 android:textColor="@color/bubble_gum"
                 android:textSize="36sp"
-                android:layout_marginTop="40dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/beta_tag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/arial_rounded_bold"
+                android:text="@string/beta"
+                android:textColor="@color/bubble_gum"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -112,7 +125,6 @@
             android:textAllCaps="false"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent" />
-
-
+        
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
