--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -11,8 +11,8 @@
             android:id="@+id/circle"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/circle"
             android:layout_marginTop="40dp"
+            android:background="@drawable/circle"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -88,70 +88,65 @@
             app:layout_constraintTop_toBottomOf="@+id/decimal" />
 
         <LinearLayout
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/explanation"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/explanation">
 
             <TextView
-                android:id="@+id/decimal2"
-                android:layout_width="wrap_content"
+                android:id="@+id/decimal1"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginRight="20dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/arial_rounded_bold"
                 android:gravity="center"
-                android:text="22"
+                android:text="@string/onboarding_decimal1"
                 android:textColor="@color/white"
                 android:textSize="28sp"
                 app:layout_constraintTop_toBottomOf="@+id/subtitle1" />
 
             <TextView
-                android:id="@+id/decimal3"
-                android:layout_width="wrap_content"
+                android:id="@+id/decimal2"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginRight="20dp"
+                android:layout_weight="1.2"
                 android:fontFamily="@font/arial_rounded_bold"
                 android:gravity="center"
-                android:text="22,1"
+                android:text="@string/onboarding_decimal2"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 app:layout_constraintTop_toBottomOf="@+id/subtitle1" />
 
             <TextView
-                android:id="@+id/decimal4"
-                android:layout_width="wrap_content"
+                android:id="@+id/decimal3"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginRight="20dp"
+                android:layout_weight="1.3"
                 android:fontFamily="@font/arial_rounded_bold"
                 android:gravity="center"
-                android:text="22,2"
+                android:text="@string/onboarding_decimal3"
                 android:textColor="@color/white"
                 android:textSize="34sp"
                 app:layout_constraintTop_toBottomOf="@+id/subtitle1" />
 
             <TextView
-                android:id="@+id/decimal5"
-                android:layout_width="wrap_content"
+                android:id="@+id/decimal4"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:layout_marginTop="40dp"
+                android:layout_weight="1.5"
                 android:fontFamily="@font/arial_rounded_bold"
                 android:gravity="center"
-                android:text="22,3"
+                android:text="@string/onboarding_decimal4"
                 android:textColor="@color/white"
                 android:textSize="38sp"
                 app:layout_constraintTop_toBottomOf="@+id/subtitle1" />
 
-
         </LinearLayout>
-
 
         <Button
             android:id="@+id/done"
