feedback component implementation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="faded_blue">#5077D4</color>
     <color name="bubble_gum">#FF55A3</color>
     <color name="background">#3700B3</color>
+    <color name="purple_2">#A858348A</color>
+
 </resources>
