--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,39 +132,12 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <io.hidro.bignumber.customviewcomponents.FeedbackViewComponent
             android:id="@+id/feedback_component"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/play"
-            app:layout_constraintRight_toRightOf="parent">
-
-            <Button
-                android:id="@+id/right_card"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:clickable="true"
-                android:focusable="true"
-                app:cardCornerRadius="100dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/lottie_anim_view_feedback"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:translationZ="20dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"
-                app:lottie_rawRes="@raw/feedback_lottie"
-                tools:visibility="visible" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <Button
             android:id="@+id/play"
